# viola

./: .coverage  .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
reports/: system-tests.xml
tests/system/: test_api_system.py  test_cli_system.py  test_pipeline_system.py
tests/system/cases/: case_001_anxiety_focus.json  case_002_anger_trigger.json  case_003_crisis_hint.json
tests/system/golden/: schema_keys.json
viola/: AGENTS.md
viola/data/: memory.json
viola/data/sessions/: 20260220_023033.json
viola/entry/: pipeline_entry.py
viola/src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
viola/src/_backup_20260222_050242/: main_pipeline.py
viola/src/data/domain_sessions/: 20260221_103025.json  20260221_103220.json  20260221_103855.json  20260221_104510.json  20260221_104920.json  20260221_105211.json  20260221_105437.json  20260221_110135.json  20260221_110258.json  20260222_011705.json  20260222_015918.json  20260222_022421.json  crisis_test.json  crisis_web_test.json  demo_chat.json  demo_timeline.json  demo_web.json  guided_real.json  mac_structured.json  mac_test.json  variety_test.json
viola/src/data/html/: viola_20260220_164335.html  viola_20260221_103855_20260221_131626.html  (+9 more)
viola/src/tests/: test_analyzer.py  test_normalizer.py  test_reporting_growth.py  test_router.py
viola/src/viola/: __main__.py  __main__.py.bak  router.py
viola/src/viola.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
viola_test/: __main__.py
web/: app.py
web/templates/: index.html
(+108 files in other folders)
